Integrate the widget-editor in the widget creation page

--- a/app/views/management/widget_steps/edit.html.erb
+++ b/app/views/management/widget_steps/edit.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_pack_tag 'application' %>
 
-<%= react_component('EditWidgetPage', {
+<%= react_component('WidgetsContainer', {
   widget: @widget
 } ) %>
 
