--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -3,6 +3,7 @@
 'jquery-ui',
 'sir-trevor',
 'select2',
+'../../../../node_modules/widget-editor/dist/styles.min',
 '../helpers',
 'settings',
 '../base',
