--- a/app/views/management/widget_steps/title.html.erb
+++ b/app/views/management/widget_steps/title.html.erb
@@ -1,7 +1,7 @@
 
 <%= javascript_pack_tag 'application' %>
 
-<%= react_component('EditWidgetPage', {
+<%= react_component('WidgetsContainer', {
   widget: @widget
 }) %>
 
