--- a/app/views/management/widgets/index.html.erb
+++ b/app/views/management/widgets/index.html.erb
@@ -4,6 +4,6 @@
 <%= render partial: 'management/tabs'%>
 
 <%= javascript_pack_tag 'application' %>
-<%= react_component('WidgetsPage', {
+<%= react_component('WidgetsContainer', {
   widgets: @formattedWidgets
 } ) %>
