add carpe landscape, ignore ds_store

--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -80,6 +80,7 @@
 
         .content {
           position: relative;
+          width: 350px;
 
           &::before {
             position: absolute;
@@ -97,6 +98,7 @@
           img {
             border: 1px solid $color-13;
             border-radius: 4px;
+            width: 100%;
           }
 
           p {
