--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,21 @@
   <link rel="apple-touch-icon" href="<%= @favico %>">
   <link rel="stylesheet" href="https://cdn.quilljs.com/1.1.6/quill.core.css">
 
+  <% if @site_page.site_template.name.eql?('CAPRE Landscape') %>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+  <% end %>
+
   <%= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Forest Atlas')) %>
   <%= stylesheet_link_tag 'front/application-theme-lsa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Landscape Application')) %>
+  <%= stylesheet_link_tag 'front/application-theme-carpe', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('CAPRE Landscape')) %>
+
   <%= stylesheet_link_tag "front/sites/#{@site_page.site.id}.css", media: 'all', 'data-turbolinks-track': 'reload' unless Rails.env.development?%>
 
   <%= favicon_link_tag unless @favico %>
   <%= yield :head %>
   <script src="//cdn.quilljs.com/1.1.6/quill.js" type="text/javascript"></script>
   <script>
-    window.template = '<%= (@site_page.site_template.name.eql? 'Forest Atlas') ? 'fa' : 'lsa' %>';
+    window.template = '<%= (@site_page.site_template.name.eql? 'Forest Atlas') ? 'fa' : (@site_page.site_template.name.eql? 'CAPRE Landscape') ? 'ca' : 'lsa' %>';
   </script>
   <script type="text/javascript">
     window.liveSettings = {
