fix rails image logic
so the previous defenitions where the same, so we where always comparing with the logo image

--- a/app/assets/stylesheets/front/_settings-theme-carpe.scss
+++ b/app/assets/stylesheets/front/_settings-theme-carpe.scss
@@ -1,5 +1,5 @@
 // Font families
-$font-family-1: 'Roboto', sans-serif;
+$font-family-1: 'Roboto Condensed', sans-serif;
 
 // Font sizes
 $font-size-small:    12px;
@@ -57,5 +57,5 @@ $mq-navbar: 'screen and (min-width: #{$breakpoint-navbar})';
 $mq-body-width: 'screen and (min-width: #{$body-max-width})';
 
 // Theme
-$theme: 2;
+$theme: 2; // Whats this ???
 $admin: false;
