--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -54,10 +54,13 @@
       margin: 0;
       padding: 0;
       border: 0;
+      min-height: 250px;
+
       color: $color-4;
+      line-height: 1.5;
+
       font-family: $font-family-1;
       font-size: $font-size-s-normal;
-      line-height: 1.5;
     }
   }
 
