Basic steps for the widget creation

--- a/app/assets/stylesheets/components/shared/c-action-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-bar.scss
@@ -12,6 +12,10 @@
     transform: translateX(-50%);
   }
 
+  .c-button + .c-button {
+    margin-left: 15px;
+  }
+
   &.-wide {
     @media #{$mq-body-width} {
       left: 0;
