--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -3,7 +3,7 @@
   // screen has a small height
   padding-bottom: 75px;
 
-  &.-title {
+  &.-dataset {
     display: flex;
     align-items: center;
     min-height: calc(100vh - 300px);
@@ -16,31 +16,23 @@
     }
   }
 
-  &.-filters {
-    margin-top: 50px;
-  }
-
-  &.-dataset {
-    .context {
-      margin: 50px 0 10px;
-      font-size: $font-size-big;
-      font-weight: $font-weight-light;
-      letter-spacing: .2px;
-      line-height: 1.14;
-    }
-  }
-
   &.-visualization {
     padding-top: 50px;
-    padding-bottom: 220px; // Extra padding for the chart selector
+    padding-bottom: 75px; // Extra padding for the chart selector
 
     > .wrapper {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: start;
 
-      .graph {
-        width: 400px;
+      > .c-inputs-container {
+        min-height: auto;
+      }
+
+      > .c-we-widget-editor {
+        width: 100%;
+        margin-top: 70px;
       }
     }
   }
