Added the 'new' and 'edit' methods to the widgets steps

--- a/app/views/management/widget_steps/_form.html.erb
+++ b/app/views/management/widget_steps/_form.html.erb
@@ -1,5 +1,6 @@
 <%= javascript_pack_tag 'application' %>
 
-<%= react_component('WidgetsContainer', {}) %>
+<%= react_component('WidgetsContainer',
+                    { datasets: @datasets, widget: @widget }) %>
 
 <%= render partial: 'shared/errors', locals: { resource: @widget } %>
