refactor steps, change Title to Details for title step

--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -26,6 +26,15 @@
             <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::OPEN_CONTENT}, class: 'c-button'  %>
           </div>
         </div>
+
+        <div class="card -footer-at-bottom">
+          <h3 class="title">Dashboard V2</h3>
+          <p class="description">New FA dashboard</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::DASHBOARD_V2}, class: 'c-button'  %>
+          </div>
+        </div>
+
         <div class="card -footer-at-bottom">
           <h3 class="title">Analysis Dashboard</h3>
           <p class="description">Build a dashboard based on a dataset.</p>
@@ -33,6 +42,7 @@
             <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::ANALYSIS_DASHBOARD}, class: 'c-button'  %>
           </div>
         </div>
+
         <div class="card -footer-at-bottom">
           <h3 class="title">Link</h3>
           <p class="description">Add a link to appear in the menus.</p>
