add wysiwyg editor if dashboard version is not the first

--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -42,13 +42,18 @@
       </div>
     </div>
   </div>
+
+  <% if @page.dashboard_version > 1 %>
+    <!-- New dashboards will have the content with the new fancy wysiwyg editor -->
+    <%= javascript_pack_tag 'application' %>
+    <%= react_component('EditDashboardPage', {
+      page: @page
+    } ) %>
+    <%= f.hidden_field :content %>
+  <% end %>
+
   <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
-
-<%= javascript_pack_tag 'application' %>
-<%= react_component('EditDashboardPage', {
-  page: @page
-} ) %>
 
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
