Add the advanced editor mode to the widget creation

--- a/app/assets/stylesheets/components/shared/c-button.scss
+++ b/app/assets/stylesheets/components/shared/c-button.scss
@@ -32,7 +32,8 @@
     font-weight: $font-weight-normal;
   }
 
-  &.-disabled {
+  &.-disabled,
+  &[disabled] {
     cursor: default;
     opacity: .3;
   }
