--- a/app/assets/stylesheets/components/shared/c-loading-spinner.scss
+++ b/app/assets/stylesheets/components/shared/c-loading-spinner.scss
@@ -18,6 +18,9 @@ $spinner-velocity: 0.6s;
   }
 
   &.-bg {
+    width: 100%;
+    height: 100%;
+
     &::before {
       content: "";
       position: absolute;
