Lower the z-index of the widget-editor
By doing this, we prevent some layers of the widget-editor from overlapping the rest of the UI.

--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -33,6 +33,7 @@
       > .c-we-widget-editor {
         width: 100%;
         margin-top: 70px;
+        z-index: 1;
       }
 
       > .advanced-editor {
