Changed the endpoints for authentication in the API

--- a/app/views/site_page/login.html.erb
+++ b/app/views/site_page/login.html.erb
@@ -1,3 +1,3 @@
-<a href="<%=ENV['API_URL']%>/auth/facebook?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Facebook</a>
-<a href="<%=ENV['API_URL']%>/auth/twitter?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Twitter</a>
-<a href="<%=ENV['API_URL']%>/auth/google?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Google</a>
+<a href="<%=ENV['CONTROL_TOWER_URL']%>/auth/facebook?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Facebook</a>
+<a href="<%=ENV['CONTROL_TOWER_URL']%>/auth/twitter?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Twitter</a>
+<a href="<%=ENV['CONTROL_TOWER_URL']%>/auth/google?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Google</a>
