Changed the endpoints for authentication in the API

--- a/app/views/management/profile/edit.html.erb
+++ b/app/views/management/profile/edit.html.erb
@@ -26,7 +26,7 @@
             <label for="REMOVE">Remove my account</label>
           </div>
           <br/><br/>
-          <%= link_to 'Recover password', ENV.fetch("API_URL") + '/auth/reset-password'  %>
+          <%= link_to 'Recover password', ENV.fetch("CONTROL_TOWER_URL") + '/auth/reset-password'  %>
         </footer>
       </div>
     </div>
