Fix the space between the buttons of the notification component

--- a/app/assets/stylesheets/components/shared/c-notification.scss
+++ b/app/assets/stylesheets/components/shared/c-notification.scss
@@ -33,6 +33,10 @@
     .dialog-buttons {
       margin-top: 15px;
 
+      button + button {
+        margin-left: 15px;
+      }
+
       @media #{$mq-tablet} {
         margin-top: 0;
       }
