bring back dashboard template

--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -55,6 +55,7 @@
       padding: 0;
       border: 0;
       color: $color-4;
+      min-height: 250px;
       font-family: $font-family-1;
       font-size: $font-size-s-normal;
       line-height: 1.5;
