enable change theme, fix broken breadcrumps menu in new template layout

--- a/app/assets/stylesheets/front/_base-theme-carpe.scss
+++ b/app/assets/stylesheets/front/_base-theme-carpe.scss
@@ -68,8 +68,6 @@ body {
 
       }
     }
-
-
   }
 
   a {
@@ -78,6 +76,10 @@ body {
     color: #FFF;
 
     text-decoration: none;
+  }
+
+  .breadcrumbs {
+    li { display: inline-block; }
   }
 
 }
