--- a/app/assets/stylesheets/components/shared/c-dashboard.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard.scss
@@ -9,6 +9,7 @@ $dashboard_text_width: 700px;
 .#{$this} {
   max-width: $body-max-width;
   margin: 0 auto;
+  overflow: hidden;
 
   ul { list-style-type: none; }
 
@@ -56,7 +57,7 @@ $dashboard_text_width: 700px;
   &__reports {
     position: relative;
     margin: 70px 0 0 0;
-    padding: 40px 0 0 0;
+    padding: 40px 0 60px 0;
 
     &:before {
       content: "";
@@ -81,6 +82,125 @@ $dashboard_text_width: 700px;
       text-align: center;
     }
 
+  }
+
+  // TODO: Move this to its own plugin
+  .carusel {
+    display: flex;
+    justify-content: flex-start;
+
+    &__wrapper { position: relative; }
+
+    &__dataContainer {
+      margin: 0 auto;
+      width: calc(100% - 180px);
+      overflow: hidden;
+    }
+
+    &__item {
+      display: block;
+      width: 340px;
+      margin: 0 20px 0 0;
+
+      flex-direction: column;
+    }
+
+    &__btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+
+      width: 40px;
+      height: 40px;
+      border-radius: 40px;
+      border: none;
+      background: #97BE32;
+      text-indent: -9999px;
+      outline: none;
+
+      &--prev { left: 0;
+
+        &:before {
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 7px solid transparent;
+          border-bottom: 7px solid transparent;
+          border-right: 7px solid #FFF;
+          position: absolute;
+          top: 50%;
+          left: 44%;
+          transform: translate(-50%, -50%);
+        }
+
+        &:after {
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 7px solid transparent;
+          border-bottom: 7px solid transparent;
+          border-right: 7px solid #97BE32;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+
+      }
+      &--next { right: 0;
+
+        &:before {
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 7px solid transparent;
+          border-bottom: 7px solid transparent;
+          border-left: 7px solid #FFF;
+          position: absolute;
+          top: 50%;
+          left: 54%;
+          transform: translate(-50%, -50%);
+        }
+
+        &:after {
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 7px solid transparent;
+          border-bottom: 7px solid transparent;
+          border-left: 7px solid #97BE32;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+
+
+      }
+
+      cursor: pointer;
+    }
+  }
+
+
+  &__reportPreview {
+    background: rgba(151, 190, 50, 0.05);
+    width: inherit;
+    h4 {
+      text-align: left;
+      font-size: 21px;
+      color: #97BE32;
+      font-weight: 300;
+      padding: 20px 30px 0 30px;
+      margin: 0;
+    }
+    p {
+      font-size: 14px;
+      color: #555555;
+      line-height: 1.3em;
+      padding: 20px 30px;
+      text-align: left;
+     }
   }
 
 }
