add widget editor to new wysiwyg

--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -47,7 +47,8 @@
   <% if @page.dashboard_version > 1 %>
     <!-- New dashboards will have the content with the new fancy wysiwyg editor -->
     <%= react_component('EditDashboardPage', {
-      page: @page
+      page: @page,
+      widgets: @widgets
     } ) %>
     <%= f.hidden_field :content %>
   <% end %>
