--- a/app/assets/stylesheets/components/shared/c-dashboard.scss
+++ b/app/assets/stylesheets/components/shared/c-dashboard.scss
@@ -44,6 +44,16 @@ $dashboard_text_width: 700px;
     width: 100%;
   }
 
+  .wysiwyg-grid-row {
+    display: flex;
+    flex-flow: row;
+    width: 100%;
+    .column {
+      flex: 1;
+      align-items: center;
+    }
+  }
+
   &__summary {
     margin: 0 auto;
     padding: 40px 0;
