fix serialize content on old Wysiwyg to return an empty object if null

--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -8,3 +8,7 @@
   image: @alternative_image,
   pageSize: defined?(size) ? size : nil
 } ) %>
+
+<script type="text/javascript">
+  window.route = 'OpenContent';
+</script>
