--- a/app/assets/stylesheets/components/shared/c-css-tabs.scss
+++ b/app/assets/stylesheets/components/shared/c-css-tabs.scss
@@ -2,42 +2,57 @@
   position: relative;
   min-height: 200px; /* This part sucks */
   clear: both;
-  margin: 25px 0;
+  margin: 50px 0 25px 0;
 
-  .tab {
-    float: left;
+  ul {
+    list-style: none;
+    margin: 0;
+    line-height: 1;
+   }
 
-    label {
-      background: #eee;
-      padding: 10px;
-      border: 1px solid #ccc;
-      margin-left: -1px;
-      position: relative;
-      left: 1px;
+  &__menu {
+    background: #eff5e0;
+    border-bottom: 1px solid #97BE32;
+    text-align: center;
+    li {
+      display: inline-block;
+      height: 50px;
     }
 
   }
 
-  [type=radio] { display: none; }
+  &__btn {
+    border: none;
+    padding: 0 60px;
+    margin: 0;
+    line-height: 51px;
+    font-size: 13px;
+    background: transparent;
+    color: rgba(0,0,0,0.66);
+    z-index: 20;
+    position: relative;
+    bottom: 0px;
+    cursor: pointer;
+    outline: none;
 
-  .content  {
-    position: absolute;
-    top: 28px;
-    left: 0;
-    background: white;
-    right: 0;
-    bottom: 0;
-    padding: 20px;
-    border: 1px solid #ccc;
+    &.active {
+      background: #FFF;
+      border-top: 1px solid #97BE32;
+      border-right: 1px solid #97BE32;
+      border-left: 1px solid #97BE32;
+    }
+
   }
 
-  [type=radio]:checked ~ label {
-    background: white;
-    border-bottom: 1px solid white;
-    z-index: 2;
-  }
-  [type=radio]:checked ~ label ~ .content {
-    z-index: 1;
+  &__items {
+    display: block;
+    padding: 40px 20px;
+    max-width: 1050px;
+    margin: 0 auto;
+
+    > div {
+      display: none; &.active { display: block; }
+    }
   }
 
 }
