--- a/app/assets/stylesheets/components/shared/c-css-tabs.scss
+++ b/app/assets/stylesheets/components/shared/c-css-tabs.scss
@@ -7,6 +7,7 @@
     list-style: none;
     margin: 0;
     line-height: 1;
+    min-width: 100%; // make sure tabs take 100% width
    }
 
   &__menu {
