--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -21,6 +21,7 @@
 <%= react_component('AdminTableView', {
   meta: {
     columns: ['Name', 'Email', 'Role', 'Sites'],
+    actions: ['delete'],
     datapoint: 'users'
   },
   users: @formattedUsers
