add login page styles

--- a/app/views/site_page/login.html.erb
+++ b/app/views/site_page/login.html.erb
@@ -1,3 +1,9 @@
-<a href="<%=ENV['CONTROL_TOWER_URL']%>/auth/facebook?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Facebook</a>
-<a href="<%=ENV['CONTROL_TOWER_URL']%>/auth/twitter?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Twitter</a>
-<a href="<%=ENV['CONTROL_TOWER_URL']%>/auth/google?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Google</a>
+<div class="fa-login">
+<h2>Login with</h2>
+<a class="fb" href="<%=ENV['CONTROL_TOWER_URL']%>/auth/facebook?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Facebook</a>
+<a class="twitter" href="<%=ENV['CONTROL_TOWER_URL']%>/auth/twitter?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Twitter</a>
+<a class="google" href="<%=ENV['CONTROL_TOWER_URL']%>/auth/google?callbackUrl=<%= request.base_url + '/login_redirect' %>&token=true">Google</a>
+
+<a class="back" href="javascript:history.back()">Or go back</a>
+
+</div>
