add map builder header on map page

--- a/app/assets/stylesheets/front/_base-theme-fa.scss
+++ b/app/assets/stylesheets/front/_base-theme-fa.scss
@@ -89,9 +89,8 @@ a {
   background: rgba($color-1, .2);
 }
 
-// We hide the map header
 .app-header {
-  display: none !important;
+  top: 30px !important; // We need to override map builder styles
 }
 
 @media (max-width:950px) {
