--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -26,7 +26,7 @@
         <% unless @page.content_type == ContentType::HOMEPAGE %>
           <div class="container">
             <%= f.label :description %>
-            <%= f.text_area :description, placeholder: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' %>
+            <%= f.text_area :description, placeholder: 'Add your description here' %>
           </div>
           <div class="container">
             <%= f.label :uri %>
