transifex, enable dispatcher for front page

--- a/app/views/site_page/homepage.html.erb
+++ b/app/views/site_page/homepage.html.erb
@@ -8,3 +8,7 @@
   image: @main_image,
   pageSize: defined?(size) ? size : nil
 } ) %>
+
+<script type="text/javascript">
+  window.route = 'Homepage';
+</script>
