--- a/app/views/admin/site_steps/name.html.erb
+++ b/app/views/admin/site_steps/name.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 <%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @site.id, current_step: step, step_names: @steps_names} %>
-<%= Gon::Base.render_data %>
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @site, url: wizard_path, method: :put do |f| %>
   <div class="l-site-creation -name">
@@ -27,3 +27,7 @@
   <%= render partial: 'footer', locals: { f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
+
+<script type="text/javascript">
+  window.route = 'SiteCreation';
+</script>
