--- a/app/assets/stylesheets/components/shared/c-cards-list.scss
+++ b/app/assets/stylesheets/components/shared/c-cards-list.scss
@@ -1,3 +1,5 @@
+// NOTE: if you change this file, take care to not
+// break .c-themes-list
 .c-cards-list {
   display: flex;
   position: relative;
