trigger header view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,5 +48,14 @@
   <%= render 'front/menu' %>
   <%= render 'front/icons' %>
   <%= yield %>
+
+  <script>
+      $(function () {
+      if (window.App) {
+        new App.View.HeaderView()
+      }
+    })
+  </script>
+
 </body>
 </html>
