--- a/app/views/management/steps_shared/_finish_footer.html.erb
+++ b/app/views/management/steps_shared/_finish_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="c-action-bar">
   <div class="wrapper">
-    <%= link_to 'Back to Pages', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
+    <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
     <div>
       <%= f.button (@page.enabled ? 'Unpublish' : 'Publish'), value: Management::PageStepsController::PUBLISH, type: 'submit', class: 'c-button js-submit' %>
       <%= link_to 'Go to live page', @page.site.routes.first.host_with_scheme + @page.url, target: '_blank', class: 'c-button' if @page.enabled  %>
