fix cancel buttons not updating UI

--- a/app/views/admin/map_versions/_form.html.erb
+++ b/app/views/admin/map_versions/_form.html.erb
@@ -35,7 +35,7 @@
 
   <div class="c-action-bar">
     <div class="wrapper">
-      <%= link_to 'Cancel', admin_map_versions_path, class: 'c-button -outline -dark-text js-cancel' %>
+      <%= link_to 'Cancel', admin_map_versions_path, class: 'c-button -outline -dark-text' %>
       <div>
         <%= f.button 'SAVE', value: 'SAVE', type: 'submit', method: :put, class: 'c-button' %>
       </div>
