--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="c-action-bar">
   <div class="wrapper">
-    <%= link_to 'Cancel', admin_sites_path, class: 'c-button -outline -dark-text js-cancel' %>
+    <%= link_to 'Cancel', admin_sites_path, class: 'c-button -outline -dark-text' %>
     <div>
       <% if @site.id %>
         <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
