--- a/app/views/admin/user_steps/_footer.html.erb
+++ b/app/views/admin/user_steps/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="c-action-bar">
   <div class="wrapper">
-    <%= link_to 'Cancel', admin_users_path, class: 'c-button -outline -dark-text js-cancel' %>
+    <%= link_to 'Cancel', admin_users_path, class: 'c-button -outline -dark-text' %>
     <div>
       <% if @user.id %>
         <% if local_assigns[:finish] %>
